; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/mi/extr_mi-cmd-env.c__initialize_mi_cmd_env.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/mi/extr_mi-cmd-env.c__initialize_mi_cmd_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@inferior_environ = common dso_local global i32 0, align 4
@path_var_name = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@orig_path = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_initialize_mi_cmd_env() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @inferior_environ, align 4
  %3 = load i32, i32* @path_var_name, align 4
  %4 = call i8* @get_in_environ(i32 %2, i32 %3)
  store i8* %4, i8** %1, align 8
  %5 = load i8*, i8** %1, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %0
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %8

8:                                                ; preds = %7, %0
  %9 = load i8*, i8** %1, align 8
  %10 = call i32 @xstrdup(i8* %9)
  store i32 %10, i32* @orig_path, align 4
  ret void
}

declare dso_local i8* @get_in_environ(i32, i32) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
